--- a/apps/hello-world/overlays/dev/kustomization.yaml
+++ b/apps/hello-world/overlays/dev/kustomization.yaml
@@ -18,5 +18,5 @@ patches:
             name: "guestbook-ui"            
  images:
         - name: gcr.io/heptio-images/ks-guestbook-demo:0.1
-        - newName: nitish9282/nginx
+          newName: nitish9282/nginx
           newTag: v1
