--- a/apps/hello-world/overlays/dev/kustomization.yaml
+++ b/apps/hello-world/overlays/dev/kustomization.yaml
@@ -3,6 +3,10 @@ kind: Kustomization
 resources:
 - ../../base
 
+commonAnnotations:
+    argocd-image-updater.argoproj.io/image-list: nitish9282/nginx:1.x
+    argocd-image-updater.argoproj.io/write-back-method: git
+
 namePrefix: nitishv-
 
 patches:
