--- a/apps/updaterargocd/overlays/updater/kustomization.yaml
+++ b/apps/updaterargocd/overlays/updater/kustomization.yaml
@@ -3,3 +3,12 @@ kind: Kustomization
 namespace: argocd
 resources:
 - ../../base
+
+patches:
+        - patch: |-
+                - op: replace
+                  path: "/spec/ports/0/nodePort"
+                  value: 32188
+          target:
+            kind: Service
+            name: "guestbook-ui"  
