--- a/projects/dev.yaml
+++ b/projects/dev.yaml
@@ -69,8 +69,10 @@ spec:
   template:
     metadata:
       annotations:
-         argocd-image-updater.argoproj.io/image-list: nitish9282/nginx:1.x
-         argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/githubsecret
+         argocd-image-updater.argoproj.io/image-list: myalias=nitish9282/nginx:1.x
+         argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
+         argocd-image-updater.argoproj.io/git-branch: main
+         argocd-image-updater.argoproj.io/myalias.force-update: "true"
       labels:
         app.kubernetes.io/managed-by: argocd-autopilot
         app.kubernetes.io/name: '{{ appName }}'
