--- a/projects/dev.yaml
+++ b/projects/dev.yaml
@@ -71,7 +71,7 @@ spec:
       annotations:
          argocd-image-updater.argoproj.io/image-list: nginx=nitish9282/nginx:1.x,apache=nitish9282/apache:latest
          argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
-         argocd-image-updater.argoproj.io/apache.update-strategy: digest
+         argocd-image-updater.argoproj.io/nginx.update-strategy: digest
          argocd-image-updater.argoproj.io/git-branch: main
       labels:
         app.kubernetes.io/managed-by: argocd-autopilot
