--- a/projects/dev.yaml
+++ b/projects/dev.yaml
@@ -69,9 +69,9 @@ spec:
   template:
     metadata:
       annotations:
-         argocd-image-updater.argoproj.io/image-list: nginx=nitish9282/nginx:latest-master-1.2
+         argocd-image-updater.argoproj.io/image-list: nginx=nitish9282/nginx:x
          argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
-         argocd-image-updater.argoproj.io/nginx.update-strategy:  digest=latest-master-1.2
+         argocd-image-updater.argoproj.io/nginx.update-strategy:  digest
          argocd-image-updater.argoproj.io/git-branch: main
       labels:
         app.kubernetes.io/managed-by: argocd-autopilot
