--- a/projects/dev.yaml
+++ b/projects/dev.yaml
@@ -69,8 +69,8 @@ spec:
   template:
     metadata:
       annotations:
-         argocd-image-updater.argoproj.io/image-list: myimage=nitish9282/nginx
-         argocd-image-updater.argoproj.io/myimage.update-strategy: latest
+         argocd-image-updater.argoproj.io/image-list: myimage=nitish9282/nginx:latest
+         argocd-image-updater.argoproj.io/myimage.update-strategy: digest
          argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
          argocd-image-updater.argoproj.io/git-branch: main
       labels:
