--- a/apps/sample/overlays/lab/config.json
+++ b/apps/sample/overlays/lab/config.json
@@ -7,5 +7,8 @@
   "srcRepoURL": "https://github.com/NitishGupta9282/autop.git",
   "srcTargetRevision": "",
   "labels": null,
-  "annotations": null
+  "annotations":
+      [
+        { "op": "add" }
+      ]
 }
