--- a/apps/sample/overlays/lab/config.json
+++ b/apps/sample/overlays/lab/config.json
@@ -8,7 +8,8 @@
   "srcTargetRevision": "",
   "labels": null,
   "annotations":
-        [{ 
-         "op": "add"   
-   }]
+        { 
+         "op": "add",
+          "test": "sample"
+   }
 }
