--- a/apps/sample/overlays/lab/config.json
+++ b/apps/sample/overlays/lab/config.json
@@ -9,7 +9,7 @@
   "labels": null,
   "annotations": {
     "argocd-image-updater.argoproj.io/git-branch": "main",
-    "argocd-image-updater.argoproj.io/image-list": "nitish9282/nginx:1.1 nitish9282/apache:1.1",
+    "argocd-image-updater.argoproj.io/image-list": "nginx",
     "argocd-image-updater.argoproj.io/write-back-method": "git"
   }
 }
