--- a/projects/lab.yaml
+++ b/projects/lab.yaml
@@ -68,11 +68,11 @@ spec:
   syncPolicy: {}
   template:
     metadata:
-      annotations:
-         argocd-image-updater.argoproj.io/update-strategy: semver
-         argocd-image-updater.argoproj.io/write-back-method: git
-         argocd-image-updater.argoproj.io/git-branch: main
-         argocd-image-updater.argoproj.io/image-list: nginx
+#       annotations:
+#          argocd-image-updater.argoproj.io/update-strategy: semver
+#          argocd-image-updater.argoproj.io/write-back-method: git
+#          argocd-image-updater.argoproj.io/git-branch: main
+#          argocd-image-updater.argoproj.io/image-list: nginx
       labels:
         app.kubernetes.io/managed-by: argocd-autopilot
         app.kubernetes.io/name: '{{ appName }}'
