--- a/apps/sample/overlays/lab/config.json
+++ b/apps/sample/overlays/lab/config.json
@@ -1,6 +1,6 @@
 {
   "appName": "sample1",
-  "userGivenName": "sample",
+  "userGivenName": "sample1",
   "destNamespace": "default",
   "destServer": "https://kubernetes.default.svc",
   "srcPath": "apps/sample/overlays/lab",
