--- a/apps/sample/overlays/lab/config.json
+++ b/apps/sample/overlays/lab/config.json
@@ -1,7 +1,7 @@
 {
   "appName": "sample",
   "userGivenName": "sample",
-  "destNamespace": "argocd",
+  "destNamespace": "default",
   "destServer": "https://kubernetes.default.svc",
   "srcPath": "apps/sample/overlays/lab",
   "srcRepoURL": "https://github.com/NitishGupta9282/autop.git",
