--- a/apps/sample/overlays/lab/config.json
+++ b/apps/sample/overlays/lab/config.json
@@ -7,5 +7,5 @@
   "srcRepoURL": "https://github.com/NitishGupta9282/autop.git",
   "srcTargetRevision": "",
   "labels": null,
-  "annotations": { "test": "op"}
+  "annotations": { test: op}
 }
