--- a/apps/sample/overlays/lab/config.json
+++ b/apps/sample/overlays/lab/config.json
@@ -7,5 +7,9 @@
   "srcRepoURL": "https://github.com/NitishGupta9282/autop.git",
   "srcTargetRevision": "",
   "labels": null,
-  "annotations": { test: op}
+  "annotations": { 
+    "argocd-image-updater.argoproj.io/update-strategy": "semver",
+    "argocd-image-updater.argoproj.io/image-list": "nginx",
+    "argocd-image-updater.argoproj.io/write-back-method": "git"
+  }
 }
