--- a/apps/sample/overlays/lab/config.json
+++ b/apps/sample/overlays/lab/config.json
@@ -9,6 +9,7 @@
   "labels": null,
   "annotations": { 
     "argocd-image-updater.argoproj.io/update-strategy": "semver",
-    "argocd-image-updater.argoproj.io/write-back-method": "git"
+    "argocd-image-updater.argoproj.io/write-back-method": "git",
+    "argocd-image-updater.argoproj.io/image-list": ""
   }
 }
