--- a/apps/sample2/overlays/web/config.json
+++ b/apps/sample2/overlays/web/config.json
@@ -1,6 +1,6 @@
 {
-  "appName": "sample2",
-  "userGivenName": "sample2",
+  "appName": "sample",
+  "userGivenName": "sample",
   "destNamespace": "default",
   "destServer": "https://kubernetes.default.svc",
   "srcPath": "apps/sample2/overlays/web",
