--- a/apps/sample2/overlays/web/config.json
+++ b/apps/sample2/overlays/web/config.json
@@ -8,6 +8,8 @@
   "srcTargetRevision": "",
   "labels": null,
   "annotations": {
-    "application": "sample"
+    "argocd-image-updater.argoproj.io/update-strategy": "semver",
+    "argocd-image-updater.argoproj.io/write-back-method": "git",
+    "argocd-image-updater.argoproj.io/git-branch": "main"
   }
 }
