--- a/apps/sample2/overlays/web/config.json
+++ b/apps/sample2/overlays/web/config.json
@@ -10,6 +10,6 @@
   "annotations": {
     "argocd-image-updater.argoproj.io/update-strategy": "semver",
     "argocd-image-updater.argoproj.io/write-back-method": "git",
-    "argocd-image-updater.argoproj.io/git-branch": "main"
+    "argocd-image-updater.argoproj.io~1git-branch": "main"
   }
 }
