--- a/apps/sample2/overlays/web/kustomization.yaml
+++ b/apps/sample2/overlays/web/kustomization.yaml
@@ -2,3 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
+
+commonAnnotations:
+        argocd-image-updater.argoproj.io/update-strategy: semver
+        argocd-image-updater.argoproj.io/write-back-method: git
+        argocd-image-updater.argoproj.io/git-branch: main
+        argocd-image-updater.argoproj.io/image-list: nginx
+
+  
+  
