--- a/apps/sample/overlays/web/config.json
+++ b/apps/sample/overlays/web/config.json
@@ -10,7 +10,6 @@
   "strategy": "semver",
   "method": "git",
   "branch": "main",
-  "images": "nginx:1.22.0
-            ,tomcat:10.1",
+  "images": "nginx:1.22.0, tomcat:10.1",
   "annotations": null
 }
