--- a/projects/web.yaml
+++ b/projects/web.yaml
@@ -68,11 +68,11 @@ spec:
   syncPolicy: {}
   template:
     metadata:
-      annotations:
-        argocd-image-updater.argoproj.io/update-strategy: '{{ strategy }}'
-        argocd-image-updater.argoproj.io/write-back-method: '{{ method }}'
-        argocd-image-updater.argoproj.io/git-branch: '{{ branch }}'
-        argocd-image-updater.argoproj.io/image-list: '{{ images }}'
+#       annotations:
+#         argocd-image-updater.argoproj.io/update-strategy: '{{ strategy }}'
+#         argocd-image-updater.argoproj.io/write-back-method: '{{ method }}'
+#         argocd-image-updater.argoproj.io/git-branch: '{{ branch }}'
+#         argocd-image-updater.argoproj.io/image-list: '{{ images }}'
       labels:
         app.kubernetes.io/managed-by: argocd-autopilot
         app.kubernetes.io/name: '{{ appName }}'
