--- a/projects/web.yaml
+++ b/projects/web.yaml
@@ -69,7 +69,12 @@ spec:
   template:
     metadata:
       annotations:
-        op: '{{ action }}'
+        argocd-image-updater.argoproj.io/update-strategy: semver
+        argocd-image-updater.argoproj.io/write-back-method: git
+        argocd-image-updater.argoproj.io/git-branch: main
+        argocd-image-updater.argoproj.io/image-list: >-
+          nginx:1.22.0,
+          tomcat:10.1
       labels:
         app.kubernetes.io/managed-by: argocd-autopilot
         app.kubernetes.io/name: '{{ appName }}'
