--- a/projects/web.yaml
+++ b/projects/web.yaml
@@ -69,7 +69,7 @@ spec:
   template:
     metadata:
       annotations:
-        argocd-image-updater.argoproj.io/update-strategy: semver
+        argocd-image-updater.argoproj.io/update-strategy: '{{ updateStrategy }}'
         argocd-image-updater.argoproj.io/write-back-method: git
         argocd-image-updater.argoproj.io/git-branch: main
         argocd-image-updater.argoproj.io/image-list: >-
