--- a/apps/sample/overlays/web/config.json
+++ b/apps/sample/overlays/web/config.json
@@ -7,7 +7,7 @@
   "srcRepoURL": "https://github.com/NitishGupta9282/autop.git",
   "srcTargetRevision": "",
   "labels": null,
-  "updateStrategy": "semver"
+  "updateStrategy": "semver",
   "annotations": {
     "updateStrategy": "semver"
   }
