--- a/apps/sample/overlays/web/config.json
+++ b/apps/sample/overlays/web/config.json
@@ -7,5 +7,9 @@
   "srcRepoURL": "https://github.com/NitishGupta9282/autop.git",
   "srcTargetRevision": "",
   "labels": null,
+  "updateStrategy": "semver",
+  "updateMethod": "git",
+  "updateBranch": "main",
+  "updateList": "nginx:1.22.0, tomcat:10.1",
   "annotations": null
 }
