--- a/apps/sample/overlays/web/config.json
+++ b/apps/sample/overlays/web/config.json
@@ -10,6 +10,6 @@
   "updateStrategy": "semver",
   "updateMethod": "git",
   "updateBranch": "main",
-  "updateList": "nginx:1.22.0",  "tomcat:10.1",
+  "updateList": ["nginx:1.22.0","tomcat:10.1"],
   "annotations": null
 }
