--- a/apps/sample/overlays/web/config.json
+++ b/apps/sample/overlays/web/config.json
@@ -12,7 +12,7 @@
   "updateBranch": "main",
   "updateList": [
                  "nginx:1.22.0",
-                 "tomcat:10.1"
-                 ],
+                 "tomcat:10.1",
+                 ]
   "annotations": null
 }
