--- a/apps/sample/overlays/web/config.json
+++ b/apps/sample/overlays/web/config.json
@@ -10,6 +10,6 @@
   "updateStrategy": "semver",
   "updateMethod": "git",
   "updateBranch": "main",
-  "updateList": ["nginx, apache, tomcat"],
+  "updateList": "nginx, apache, tomcat",
   "annotations": null
 }
