--- a/apps/sample/overlays/web/config.json
+++ b/apps/sample/overlays/web/config.json
@@ -11,8 +11,8 @@
   "updateMethod": "git",
   "updateBranch": "main",
   "updateList": [
-    "nginx:1.22.0"
-    "tomcat:0.10"
-  ],
+    "nginx:1.22.0",
+    "tomcat:0.10",
+  ]
   "annotations": null
 }
