--- a/apps/sample/overlays/web/kustomization.yaml
+++ b/apps/sample/overlays/web/kustomization.yaml
@@ -2,7 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
-
-images:
-  - name: odaniait/aws-kubectl
-    Digest: sha256:3fff8a8570ecc98aa627331613eb1e597204f3edd66567c736800e8315d8dfca
+- image_transformer_config.yaml
