--- a/apps/sample/overlays/web/kustomization.yaml
+++ b/apps/sample/overlays/web/kustomization.yaml
@@ -2,4 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
-- image_transformer_config.yaml
+
+configurations:
+  - image_transformer_config.yaml
+
