--- a/projects/web.yaml
+++ b/projects/web.yaml
@@ -68,11 +68,11 @@ spec:
   syncPolicy: {}
   template:
     metadata:
-#       annotations:
-#         argocd-image-updater.argoproj.io/update-strategy: '{{ updateStrategy }}'
-#         argocd-image-updater.argoproj.io/write-back-method: '{{ updateMethod }}'
-#         argocd-image-updater.argoproj.io/git-branch: '{{ updateBranch }}'
-#         argocd-image-updater.argoproj.io/image-list: '{{ updateList }}'
+      annotations:
+        argocd-image-updater.argoproj.io/update-strategy: '{{ updateStrategy }}'
+        argocd-image-updater.argoproj.io/write-back-method: '{{ updateMethod }}'
+        argocd-image-updater.argoproj.io/git-branch: '{{ updateBranch }}'
+        argocd-image-updater.argoproj.io/image-list: '{{ updateList }}'
       labels:
         app.kubernetes.io/managed-by: argocd-autopilot
         app.kubernetes.io/name: '{{ appName }}'
