--- a/apps/sample/overlays/web/config.json
+++ b/apps/sample/overlays/web/config.json
@@ -13,5 +13,8 @@
   "updateList": 'nginx:1.22.0,\
                  tomcat:0.10, \
                  billi:0.0'
-  "annotations": null
+  "annotations": {
+       "op": "action"
+
+   }
 }
