--- a/projects/web.yaml
+++ b/projects/web.yaml
@@ -69,10 +69,10 @@ spec:
   template:
     metadata:
       annotations:
-        argocd-image-updater.argoproj.io/update-strategy: '{{ updateStrategy }}'
-        argocd-image-updater.argoproj.io/write-back-method: '{{ updateMethod }}'
-        argocd-image-updater.argoproj.io/git-branch: '{{ updateBranch }}'
-        argocd-image-updater.argoproj.io/image-list: '{{ updateList }}'
+#         argocd-image-updater.argoproj.io/update-strategy: '{{ updateStrategy }}'
+#         argocd-image-updater.argoproj.io/write-back-method: '{{ updateMethod }}'
+#         argocd-image-updater.argoproj.io/git-branch: '{{ updateBranch }}'
+#         argocd-image-updater.argoproj.io/image-list: '{{ updateList }}'
       labels:
         app.kubernetes.io/managed-by: argocd-autopilot
         app.kubernetes.io/name: '{{ appName }}'
