--- a/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
+++ b/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
@@ -4,7 +4,7 @@ metadata:
   name: argocd-vault-plugin-credentials
   namespace: argocd
 type: Opaque
-data:
+stringData:
   AVP_AUTH_TYPE: approle
   AVP_ROLE_ID: ff55cf35-789e-7101-2535-c5f87e520493
   AVP_SECRET_ID: 1be40c4d-f3c9-beb9-3f60-53cd759e7ce5
