--- a/bootstrap/argo-cd/kustomization.yaml
+++ b/bootstrap/argo-cd/kustomization.yaml
@@ -14,6 +14,7 @@ configMapGenerator:
   
 patchesStrategicMerge:
 - argocd-repo-server-deploy.yaml
+- argocd-cm.yaml
 
 kind: Kustomization
 namespace: argocd
