--- a/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
+++ b/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
@@ -4,9 +4,9 @@ metadata:
   name: argocd-vault-plugin-credentials
   namespace: argocd
 type: Opaque
-stringData:
-  AVP_AUTH_TYPE: approle
-  AVP_ROLE_ID: ff55cf35-789e-7101-2535-c5f87e520493
-  AVP_SECRET_ID: 1be40c4d-f3c9-beb9-3f60-53cd759e7ce5
-  AVP_TYPE: vault
-  VAULT_ADDR: http://vault2.vault:8200
+data:
+  AVP_AUTH_TYPE: YXBwcm9sZQ==
+  AVP_ROLE_ID: ZmY1NWNmMzUtNzg5ZS03MTAxLTI1MzUtYzVmODdlNTIwNDkz
+  AVP_SECRET_ID: MWJlNDBjNGQtZjNjOS1iZWI5LTNmNjAtNTNjZDc1OWU3Y2U1
+  AVP_TYPE: dmF1bHQ=
+  VAULT_ADDR: aHR0cDovL3ZhdWx0Mi52YXVsdDo4MjAw
