--- a/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
+++ b/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
@@ -5,8 +5,7 @@ metadata:
   namespace: argocd
 type: Opaque
 data:
-  AVP_AUTH_TYPE: YXBwcm9sZQ==
-  AVP_ROLE_ID: ZTBlODBlMjgtODE1Ni02ZTRlLThiZWYtOGQ4MTdkZDAyM2Jm
-  AVP_SECRET_ID: YWQ1YWJhODctYzZjNS0xZDM1LTljNTUtNmJkMjQxY2IwOTlm
+  AVP_AUTH_TYPE: azhz
+  AVP_K8S_ROLE: YXJnb2Nk
   AVP_TYPE: dmF1bHQ=
   VAULT_ADDR: aHR0cDovL3ZhdWx0Mi52YXVsdDo4MjAw
