--- a/bootstrap/argo-cd/argocd-repo-server-deploy.yaml
+++ b/bootstrap/argo-cd/argocd-repo-server-deploy.yaml
@@ -40,4 +40,5 @@ spec:
           - mountPath: /custom-tools
             name: custom-tools
 
-      
+      # Not strictly necessary, but required for passing AVP configuration from a secret and for using Kubernetes auth to Hashicorp Vault
+      automountServiceAccountToken: true
