--- a/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
+++ b/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
@@ -5,7 +5,8 @@ metadata:
   namespace: argocd
 type: Opaque
 data:
-  AVP_AUTH_TYPE: azhz
-  AVP_K8S_ROLE: YXJnb2Nk
+  AVP_AUTH_TYPE: dG9rZW4=
   AVP_TYPE: dmF1bHQ=
   VAULT_ADDR: aHR0cDovL3ZhdWx0Mi52YXVsdDo4MjAw
+  VAULT_TOKEN: aHZzLmdzQnF0NXFQT2pHSjZxdGN3ZU44N09qYg==
+  
