--- a/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
+++ b/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
@@ -5,8 +5,9 @@ metadata:
   namespace: argocd
 type: Opaque
 data:
-  AVP_AUTH_TYPE: dG9rZW4=
-  AVP_TYPE: dmF1bHQ=
-  VAULT_ADDR: aHR0cDovL3ZhdWx0Mi52YXVsdDo4MjAw
-  VAULT_TOKEN: aHZzLmdzQnF0NXFQT2pHSjZxdGN3ZU44N09qYg==
+  VAULT_ADDR: "http://vault2.vault:8200"    
+  AVP_TYPE: vault                     
+  AVP_AUTH_TYPE: approle             
+  AVP_ROLE_ID: 69b290dd-71dd-9744-9e88-b5af02f2d4ae                
+  AVP_SECRET_ID: 927704f0-a5ae-b261-1332-a81ff53872d2           
   
