--- a/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
+++ b/bootstrap/argo-cd/argocd-vault-plugin-credentials.yaml
@@ -4,7 +4,7 @@ metadata:
   name: argocd-vault-plugin-credentials
   namespace: argocd
 type: Opaque
-data:
+stringData:
   VAULT_ADDR: "http://vault2.vault:8200"    
   AVP_TYPE: vault                     
   AVP_AUTH_TYPE: approle             
