--- a/bootstrap/argo-cd/argocd-cm.yaml
+++ b/bootstrap/argo-cd/argocd-cm.yaml
@@ -8,3 +8,7 @@ data:
       generate:
         command: ["argocd-vault-plugin"]
         args: ["generate", "./"]
+    - name: argocd-vault-plugin-kustomize
+      generate:
+        command: ["sh", "-c"]
+        args: ["kustomize build . | argocd-vault-plugin generate -"]
