--- a/bootstrap/argo-cd/cmp-plugin.yaml
+++ b/bootstrap/argo-cd/cmp-plugin.yaml
@@ -3,26 +3,22 @@ kind: ConfigMap
 metadata:
   name: cmp-plugin
 data:
-  avp-kustomize.yaml: |
-    ---
+  avp.yaml: |
     apiVersion: argoproj.io/v1alpha1
     kind: ConfigManagementPlugin
     metadata:
-      name: argocd-vault-plugin-kustomize
+      name: argocd-vault-plugin
     spec:
       allowConcurrency: true
-      # Note: this command is run _before_ anything is done, therefore the logic is to check
-      # if this looks like a Kustomize bundle
       discover:
         find:
           command:
-            - find
-            - "."
-            - -name
-            - kustomization.yaml
+            - sh
+            - "-c"
+            - "find . -name '*.yaml' | xargs -I {} grep \"<path\\|avp\\.kubernetes\\.io\" {} | grep ."
       generate:
         command:
-          - sh
-          - "-c"
-          - "kustomize build . | argocd-vault-plugin generate -"
+          - argocd-vault-plugin
+          - generate
+          - "."
       lockRepo: false
