--- a/bootstrap/argo-cd/argocd-repo-server.yaml
+++ b/bootstrap/argo-cd/argocd-repo-server.yaml
@@ -34,6 +34,9 @@ spec:
         securityContext:
           runAsNonRoot: true
           runAsUser: 999
+        envFrom:
+          - secretRef:
+              name: argocd-vault-plugin-credentials
         volumeMounts:
           - mountPath: /var/run/argocd
             name: var-files
