--- a/bootstrap/argo-cd/cmp-plugin.yaml
+++ b/bootstrap/argo-cd/cmp-plugin.yaml
@@ -20,5 +20,7 @@ data:
         command:
           - argocd-vault-plugin
           - generate
+          - "-s"
+          - "argocd-vault-plugin-credentials"
           - "."
       lockRepo: false
