--- a/bootstrap/argo-cd/kustomization.yaml
+++ b/bootstrap/argo-cd/kustomization.yaml
@@ -11,7 +11,12 @@ configMapGenerator:
         key: git_username
         name: autopilot-secret
   name: argocd-cm
+# patchesStrategicMerge:
+# - argocd-repo-server.yaml
+
 kind: Kustomization
 namespace: argocd
 resources:
 - github.com/argoproj-labs/argocd-autopilot/manifests/base?ref=v0.4.7
+- cmp-plugin.yaml
+- argocd-vault-plugin-credentials.yaml
