--- a/bootstrap/argo-cd/kustomization.yaml
+++ b/bootstrap/argo-cd/kustomization.yaml
@@ -11,8 +11,8 @@ configMapGenerator:
         key: git_username
         name: autopilot-secret
   name: argocd-cm
-# patchesStrategicMerge:
-# - argocd-repo-server.yaml
+patchesStrategicMerge:
+- argocd-repo-server.yaml
 
 kind: Kustomization
 namespace: argocd
